Prefer fixing individual marker z-index instead of all divs

--- a/app/static/sass/index/_distance.scss
+++ b/app/static/sass/index/_distance.scss
@@ -6,7 +6,7 @@
 
         &.hidden {
             opacity: 0;
-            pointer-events: none
+            pointer-events: none;
         }
     }
 }
@@ -19,7 +19,7 @@
 }
 
 .maplibregl-marker.distance-marker:not(.ghost-marker) {
-    z-index: 5;
+    z-index: 1;
 }
 
 .maplibregl-marker.distance-marker.ghost-marker {
@@ -33,6 +33,6 @@
 
     &.dragging {
         opacity: 0 !important;
-        z-index: 10;
+        z-index: 2;
     }
 }
