--- a/app/static/sass/index/_index.scss
+++ b/app/static/sass/index/_index.scss
@@ -31,7 +31,3 @@
         }
     }
 }
-
-.maplibregl-control-container > div {
-    z-index: 300;
-}
